feat: getChatMembers and searchByUsername routes
